# ISDC-2025

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/mapping/: depth
devel/lib/pkgconfig/: mapping.pc  mars_gazebo.pc  robot_description.pc  zed_interfaces.pc  zed_nodelets.pc  zed_wrapper.pc
devel/lib/python3/dist-packages/zed_nodelets/cfg/: ZedConfig.py
devel/lib/zed_wrapper/: zed_wrapper_node
devel/share/gennodejs/ros/zed_interfaces/msg/: _index.js
devel/share/mapping/cmake/: mappingConfig.cmake
devel/share/mars_gazebo/cmake/: mars_gazeboConfig.cmake
devel/share/robot_description/cmake/: robot_descriptionConfig.cmake
devel/share/zed_interfaces/cmake/: zed_interfaces-msg-extras.cmake  zed_interfaces-msg-paths.cmake  zed_interfacesConfig.cmake
devel/share/zed_nodelets/cmake/: zed_nodeletsConfig.cmake
devel/share/zed_wrapper/cmake/: zed_wrapperConfig.cmake
src/mapping/: CMakeLists.txt  planner.py
src/mapping/src/: mapping.cpp
src/mapping2/: CMakeLists.txt  package.xml
src/mapping2/scripts/: Readme.md  depth.py
src/mapping2/src/: mapping.cpp
src/vision/: CMakeLists.txt
src/vision/launch/: mapping.launch
src/vision/src/: depth_mapper.cpp  pc_mapper.cpp  zed_tf.cpp
